--- a/app/Views/layout/_footer.latte
+++ b/app/Views/layout/_footer.latte
@@ -1,8 +1,8 @@
 <!-- Footer -->
 <footer class="sticky-footer mt-5 footer">
-	<div class="container my-auto shadow">
+	<div class="container my-auto">
 		<div class="copyright text-center my-auto text-light">
-			<span>Copyright 2020 made with <i class="fa fa-heart text-danger"></i> BlackCoderCrush</span>
+			<span>Copyright 2020 made with <i class="fal fa-seedling text-success"></i> BlackCoderCrush</span>
 		</div>
 	</div>
 </footer>
