--- a/app/Views/layout/_navbar.latte
+++ b/app/Views/layout/_navbar.latte
@@ -9,32 +9,32 @@
 		<li class="nav-item dropdown no-arrow mx-1 mr-3">
 			<a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" data-toggle="dropdown">
 				<i class="fal fa-bell fa-fw"></i>
-				<!-- <span class="badge badge-danger badge-counter">1+</span> -->
+				<span class="badge badge-danger badge-counter">1+</span>
 			</a>
 			<div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in">
 				<h6 class="dropdown-header">
 					<i class="fal fa-sync fa-fw mr-2"></i>
 					Notifikasi
 				</h6>
-				<!-- <a class="dropdown-item d-flex align-items-center" href="#"> -->
-				<!--   <div class="mr-3"> -->
-				<!--     <div class="icon-circle bg-primary"> -->
-				<!--       <i class="fal fa-fw fa-tools text-white"></i> -->
-				<!--     </div> -->
-				<!--   </div> -->
-				<!--   <div> -->
-				<!--     <div class="small text-gray-500">April, 18, 2020</div> -->
-				<!--     <span class="font-weight-bold">New Tools Admin Finder</span> -->
-				<!--   </div> -->
-				<!-- </a> -->
-				<a class="dropdown-item text-center small text-gray-600" href="#">Tidak ada Notifikasi</a>
+				<a class="dropdown-item d-flex align-items-center" href="{base_url()}tools/adfin">
+					<div class="mr-3">
+						<div class="icon-circle bg-primary">
+							<i class="fal fa-fw fa-tools text-white"></i>
+						</div>
+					</div>
+					<div>
+						<div class="small text-gray-500">April, 24, 2020</div>
+						<span class="font-weight-bold">New Tools Admin Finder</span>
+					</div>
+				</a>
+				<!-- <a class="dropdown-item text-center small text-gray-600" href="#">Tidak ada Notifikasi</a> -->
 			</div>
 		</li>
 		<div class="darkmode">
 			<input id="darkmode" class="dm-control" type="checkbox" name="darkmode">
 			<label class="dm-label" for="darkmode">
-				<ion-icon class="dm-label-icon" name="sunny-outline"></ion-icon>
-				<ion-icon class="dm-label-icon" name="moon-outline"></ion-icon>
+				<i class="fal fa-fw fa-sun dm-label-icon"></i>
+				<i class="fal fa-fw fa-moon dm-label-icon"></i>
 			</label>
 		</div>
 		<div class="topbar-divider d-sm-block"></div>
@@ -45,7 +45,7 @@
 			<div class="dropdown-menu dropdown-menu-right shadow animated--grow-in">
 				<h5 class="dropdown-header">Social Media</h5>
 				<a class="dropdown-item" href="http://blackcodercrush.rf.gd" target="_blank">
-					<ion-icon src="{base_url()}assets/icons/profileweb.svg" style="font-size: 20px"></ion-icon>
+					<i class="fal fa-fw fa-browser"></i>
 					<span>Website Profile</span>
 				</a>
 				<a class="dropdown-item" href="https://www.instagram.com/blackcodercrush" target="_blank">
