--- a/app/Views/assets/css.latte
+++ b/app/Views/assets/css.latte
@@ -7,6 +7,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="{base_url()}assets/img/icon/favicon-16x16.png">
 <!-- Css -->
 <link rel="stylesheet" href="{base_url()}assets/plugins/fontawesome/css/all.min.css" type="text/css">
+<link rel="stylesheet" href="{base_url()}assets/plugins/datatables/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" href="{base_url()}assets/css/sb-admin-2.min.css" type="text/css">
 <link rel="stylesheet" href="{base_url()}assets/plugins/sweetalert2/dist/sweetalert2.min.css">
 <link rel="stylesheet" href="{base_url()}assets/plugins/waves/dist/waves.min.css">
@@ -15,7 +16,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
 <!-- Load Javascript -->
 <script src="{base_url()}assets/plugins/jquery/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="{base_url()}assets/plugins/bsvalidator/dist/jquery.validate.min.js"></script>
 <script src="{base_url()}assets/plugins/sweetalert2/dist/sweetalert2.all.min.js"></script>
+
 <script src="{base_url()}assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="{base_url()}assets/plugins/waves/dist/waves.min.js"></script>
+<script src="{base_url()}assets/plugins/datatables/jquery.dataTables.min.js"></script>
+<script src="{base_url()}assets/plugins/datatables/dataTables.bootstrap4.min.js"></script>
+<script src="{base_url()}assets/plugins/ionicon/dist/ionicons.js"></script>
