--- a/app/Views/base.latte
+++ b/app/Views/base.latte
@@ -10,14 +10,7 @@
 	<body id="page-top" class="sidebar-toggled">
 		<div id="wrapper">
 			<div id="loader-wrapper">
-				<!-- <img class="loader" src="assets/img/loader.svg" alt="loader"> -->
-				<div class="loader">
-					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
-						<path d="M24.3 30C11.4 30 5 43.3 5 50s6.4 20 19.3 20c19.3 0 32.1-40 51.4-40 C88.6 30 95 43.3 95 50s-6.4 20-19.3 20C56.4 70 43.6 30 24.3 30z">
-						<animate attributeName="stroke-dashoffset" repeatCount="indefinite" dur="1s" keyTimes="0;1" values="0;256.58892822265625" style="animation-play-state: running; animation-delay: 0s;"></animate>
-						</path>
-					</svg>
-				</div>
+				<div class="loader"></div>
 				<div class="loader-sec-right"></div>
 				<div class="loader-sec-left"></div>
 			</div>
