--- a/app/Views/layout/_sidebar.latte
+++ b/app/Views/layout/_sidebar.latte
@@ -8,7 +8,7 @@
 	</a>
 	<hr class="sidebar-divider my-0 mt-3">
 	<li class="nav-item active">
-		<a class="nav-link" href="/">
+		<a class="nav-link" href="{base_url()}">
 			<i class="fal fa-fw fa-home"></i>
 			<span>Home</span>
 		</a>
@@ -16,7 +16,7 @@
 	<hr class="sidebar-divider my-0">
 	<li class="nav-item">
 		<a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSosmed">
-			<ion-icon name="apps-outline"></ion-icon>
+			<i class="fal fa-fw fa-tools"></i>
 			<span>Sosmed Tools</span>
 		</a>
 		<div id="collapseSosmed" class="collapse" data-parent="#accordinSidebar">
@@ -63,7 +63,7 @@
 					<span>Whois Lookup</span>
 				</a>
 				<a href="{base_url()}tools/reverseip" class="collapse-item">
-					<ion-icon name="arrow-redo-outline"></ion-icon>
+					<i class="fal fa-fw fa-share"></i>
 					<span>Reverse IP</span>
 				</a>
 				<a href="{base_url()}tools/dns" class="collapse-item">
@@ -123,7 +123,7 @@
 					<span>PHP Encryption</span>
 				</a>
 				<a class="collapse-item" href="{base_url()}tools/genhash">
-					<ion-icon name="finger-print-outline"></ion-icon>
+					<i class="fal fa-fw fa-fingerprint"></i>
 					<span>Generate Hash</span>
 				</a>
 			</div>
@@ -146,31 +146,31 @@
 					<i class="fal fa-fw fa-syringe fa-rotate-180"></i>
 					<span>Balibang Auto Sqli</span>
 				</a>
-				<a class="collapse-item" href="{base_url()}tools/webdav.php">
+				<a class="collapse-item" href="{base_url()}tools/webdav">
 					<ion-icon src="{base_url()}assets/icons/webdav.svg"></ion-icon>
 					<span>WebDav Deface</span>
 				</a>
-				<a class="collapse-item" href="{base_url()}tools/drupal.php">
+				<a class="collapse-item" href="{base_url()}tools/drupal">
 					<i class="fal fa-syringe fa-fw fa-rotate-180"></i>
 					<span>Drupal Exploit</span>
 				</a>
-				<a class="collapse-item" href="{base_url()}tools/hackbar.php">
+				<a class="collapse-item" href="{base_url()}tools/hackbar">
 					<i class="far fa-fw fa-skull"></i>
 					<span>Hackbar</span>
 				</a>
-				<a class="collapse-item" href="{base_url()}tools/lokoexpoit.php">
+				<a class="collapse-item" href="{base_url()}tools/lokoexpoit">
 					<i class="fal fa-syringe fa-fw fa-rotate-180"></i>
 					<span>Lokmed Auto Exploit</span>
 				</a>
-				<a class="collapse-item" href="{base_url()}tools/wpbrute.php">
+				<a class="collapse-item" href="{base_url()}tools/wpbrute">
 					<i class="fab fa-fw fa-wordpress"></i>
 					<span>WP BruteForce</span>
 				</a>
-				<a class="collapse-item" href="{base_url()}tools/kcfinder.php">
+				<a class="collapse-item" href="{base_url()}tools/kcfinder">
 					<i class="fal fa-syringe fa-fw fa-rotate-180"></i>
 					<span>Kcfinder Exploiter</span>
 				</a>
-				<a class="collapse-item" href="{base_url()}tools/adfin.php">
+				<a class="collapse-item" href="{base_url()}tools/adfin">
 					<i class="fal fa-search fa-fw"></i>
 					<span>Admin Finder</span>
 				</a>
@@ -186,13 +186,13 @@
 		<div id="collapseProgrammer" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded py-2 bg-light">
 				<h5 class="collapse-header">Programmer Tools</h5>
-				<a class="collapse-item" href="{base_url()}tools/editor.php">
-					<ion-icon name="create-outline"></ion-icon>
+				<a class="collapse-item" href="{base_url()}tools/editor">
+					<i class="fal fa-fw fa-edit"></i>
 					<span>Live Editor</span>
 				</a>
-				<a class="collapse-item" href="{base_url()}tools/jso.php">
-					<ion-icon src="{base_url()}assets/icons/puzzle.svg"></ion-icon>
-					<span>JSO Creator</span>
+				<a class="collapse-item" href="{base_url()}tools/jso">
+					<i class="fal fa-fw fa-cogs"></i>
+					<span>JSO Generator</span>
 				</a>
 			</div>
 		</div>
