--- a/assets/scss/_form.scss
+++ b/assets/scss/_form.scss
@@ -34,6 +34,10 @@
 		&::placeholder {
 			color: rgba(255, 255, 255, 0.5);
 		}
+		&[readonly], &.disabled, &:disabled {
+			background-color: lighten(#2e3c50, 7%);
+			opacity: 1;
+		}
 	}
 }
 
@@ -63,6 +67,10 @@
 				border-color: #0be881;
 				box-shadow: 0 0 0 0.25rem rgba(5, 196, 107, 0.3)
 			}
+		}
+		&[readonly], &.disabled, &:disabled {
+			background-color: lighten(#2e3c50, 7%);
+			opacity: 1;
 		}
 	}
 }
