--- a/assets/scss/_loading.scss
+++ b/assets/scss/_loading.scss
@@ -25,35 +25,43 @@
 		bottom: 0;
 	}
 	.loader {
-		width: 150px;
 		display: block;
-		z-index: 1002;
+		border: 3px solid transparent;
+		border-top-color: #e67e22;
+		width: 150px;
+		height: 150px;
+		border-radius: 50%;
 		position: relative;
 		top: 50%;
 		left: 50%;
-		transform: translate(-50%, -50%);
-		transition: all 0.5s ease-in-out;
-
-		svg {
-			margin: auto;
-			background: none;
-			display: block;
-			shape-rendering: auto;
-			animation-play-state: running;
-			animation-delay: 0s;
-			width: 144px;
-			height: 144px;
-			path {
-				transform: scale(1);
-				transform-origin: 50px 50px;
-				animation-play-state: running;
-				animation-delay: 0s;
-				fill: none;
-				stroke: #000;
-				stroke-width: 4;
-				stroke-linecap: round;
-				stroke-dasharray: 205.271142578125 51.317785644531256;
-			}
+		margin: -75px 0 0 -75px;
+		animation: spin 2s linear infinite;
+		z-index: 1002;
+		transition: all 0.3s ease-in-out;
+		&::before {
+			content: '';
+			position: absolute;
+			top: 7px;
+			left: 7px;
+			right: 7px;
+			bottom: 7px;
+			border: 3px solid transparent;
+			border-radius: 50%;
+			border-top-color: #d60331;
+			animation: spin 1.5s ease-in-out infinite;
+			animation-delay: 0.5s;
+		}
+		&::after {
+			content: '';
+			position: absolute;
+			top: 21px;
+			left: 21px;
+			right: 21px;
+			bottom: 21px;
+			border: 3px solid transparent;
+			border-radius: 50%;
+			border-top-color: #00cec9;
+			animation: spin 1s ease-in-out infinite;
 		}
 	}
 }
@@ -63,11 +71,11 @@
 		transition: all 150ms 1s ease-in-out;
 		transform: translateX(-100%);
 		.loader-sec-right {
-			transition: all 0.5s 0.5s ease-in-out;
+			transition: all 0.3s 0.5s ease-in-out;
 			transform: translateY(-100%);
 		}
 		.loader-sec-left {
-			transition: all 0.5s 0.5s ease-in-out;
+			transition: all 0.3s 0.5s ease-in-out;
 			transform: translateY(100%);
 		}
 		.loader {
@@ -76,51 +84,11 @@
 		}
 	}
 }
-// #loader-wrapper .loader {
-//   display: block;
-//   border: 3px solid transparent;
-//   border-top-color: #e67e22;
-//   width: 150px;
-//   height: 150px;
-//   border-radius: 50%;
-//   position: relative;
-//   top: 50%;
-//   left: 50%;
-//   margin: -75px 0 0 -75px;
-//   animation: spin 3s linear infinite;
-//   z-index: 1002;
-//   transition: all 0.5s ease-in-out;
-// }
-// @keyframes spin {
-//   0% {
-//     transform: rotate(0deg);
-//   }
-//   100% {
-//     transform: rotate(360deg);
-//   }
-// }
-// #loader-wrapper .loader::before {
-//   content: '';
-//   position: absolute;
-//   top: 7px;
-//   left: 7px;
-//   right: 7px;
-//   bottom: 7px;
-//   border: 3px solid transparent;
-//   border-radius: 50%;
-	// border-top-color: #d60331;
-//   animation: spin 2s ease-in-out infinite;
-//   animation-delay: 0.5s;
-// }
-// #loader-wrapper .loader::after {
-//   content: '';
-//   position: absolute;
-//   top: 21px;
-//   left: 21px;
-//   right: 21px;
-//   bottom: 21px;
-//   border: 3px solid transparent;
-//   border-radius: 50%;
-//   border-top-color: #00cec9;
-//   animation: spin 1.5s ease-in-out infinite;
-// }
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
