--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -34,8 +34,6 @@ $yiq-contrasted-threshold: 195 !default;
 // Typography
 $body-color: $gray-600 !default;
 
-$font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
-
 $font-weight-light: 300 !default;
 // $font-weight-base: 400;
 $headings-font-weight: 400 !default;
@@ -96,17 +94,25 @@ $brand_colors: map-merge(
 $border-radius: 0.35rem !default;
 $border-color: darken($white, 1%);
 
+$dark-primary: darken(adjust-hue($blue, 10deg), 3%);
+$dark-info:    darken(adjust-hue($teal, 10deg), 3%);
+$dark-success: darken(adjust-hue($green, 10deg), 3%);
+$dark-warning: darken(adjust-hue($yellow, 10deg), 3%);
+$dark-danger:  darken(adjust-hue($red, 10deg), 3%);
+$dark-purple:  darken(adjust-hue($purple, 10deg), 3%);
+$dark-indigo:  darken(adjust-hue($indigo, 10deg), 3%);
+
 // Dark theme colors
 $dark-theme-colors: () !default;
 $dark-theme-colors: map-merge(
 	(
-		"primary": #2979FF,
-		"info": #38adad,
-		"success": #2ecc71,
-		"danger": lighten(#ff3838, 1%),
-		"warning": #f1c40f,
-		"indigo": #7E57C2,
-		"purple": #AB47BC
+		"primary": $dark-primary,
+		"info": $dark-info,
+		"success": $dark-success,
+		"danger": $dark-danger,
+		"warning": $dark-warning,
+		"indigo": $dark-indigo,
+		"purple": $dark-purple,
 	),
 	$dark-theme-colors
 );
@@ -119,3 +125,5 @@ $form-is-invalid: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 $custom-select-background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23f1f2f6' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") !default;
 $custom-select-is-valid: $custom-select-background no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' aria-hidden='true' focusable='false' width='12' height='12' style='-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);' preserveAspectRatio='xMidYMid meet' viewBox='0 0 24 24'%3E%3Cpath d='M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10s10-4.5 10-10S17.5 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4l8-8l-1.41-1.42z' fill='%230be881'/%3E%3C/svg%3E") #213040 no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem) !default;
 $custom-select-is-invalid: $custom-select-background no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' aria-hidden='true' focusable='false' width='15' height='15' style='-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);' preserveAspectRatio='xMidYMid meet' viewBox='0 0 24 24'%3E%3Cpath d='M8.27 3L3 8.27v7.46L8.27 21h7.46C17.5 19.24 21 15.73 21 15.73V8.27L15.73 3M9.1 5h5.8L19 9.1v5.8L14.9 19H9.1L5 14.9V9.1m6 5.9h2v2h-2v-2m0-8h2v6h-2V7' fill='%23ff3f34'/%3E%3C/svg%3E") #213040 no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem) !default;
+
+$text-color-dark: #f1f1f1;
