--- a/app/Views/layout/_navbar.latte
+++ b/app/Views/layout/_navbar.latte
@@ -9,17 +9,28 @@
 		<li class="nav-item dropdown no-arrow mx-1 mr-3">
 			<a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" data-toggle="dropdown">
 				<i class="fal fa-bell fa-fw"></i>
-				<span class="badge badge-danger badge-counter">1+</span>
+				<span class="badge badge-danger badge-counter">2+</span>
 			</a>
 			<div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in">
 				<h6 class="dropdown-header">
 					<i class="fal fa-sync fa-fw mr-2"></i>
 					Notifikasi
 				</h6>
+				<a class="dropdown-item d-flex align-items-center" href="{base_url()}tools/jso">
+					<div class="mr-3">
+						<div class="icon-circle bg-success">
+							<i class="fal fa-fw fa-rotate-180 fa-cogs text-white"></i>
+						</div>
+					</div>
+					<div>
+						<div class="small text-gray-500">April, 27, 2020</div>
+						<span class="font-weight-bold">New Tools JSO Generator</span>
+					</div>
+				</a>
 				<a class="dropdown-item d-flex align-items-center" href="{base_url()}tools/adfin">
 					<div class="mr-3">
 						<div class="icon-circle bg-primary">
-							<i class="fal fa-fw fa-tools text-white"></i>
+							<i class="fal fa-fw fa-search text-white"></i>
 						</div>
 					</div>
 					<div>
