--- a/app/Views/layout/_navbar.latte
+++ b/app/Views/layout/_navbar.latte
@@ -13,7 +13,7 @@
 			</a>
 			<div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in">
 				<h6 class="dropdown-header">
-					<i class="fal fa-sync fa-fw mr-2"></i>
+					<i class="fal fa-sync fa-fw "></i>
 					Notifikasi
 				</h6>
 				<a class="dropdown-item d-flex align-items-center" href="{base_url()}tools/encdec">
@@ -82,27 +82,27 @@
 					<span>Website Profile</span>
 				</a>
 				<a class="dropdown-item" href="https://www.instagram.com/blackcodercrush" target="_blank">
-					<i class="fab  mr-2 text-gray fa-instagram"></i>
+					<i class="fab text-gray fa-instagram"></i>
 					<span>Instagram</span>
 				</a>
 				<a class="dropdown-item" href="https://facebook.com/blackcodercrush" target="_blank">
-					<i class="fab  mr-2 text-gray fa-facebook"></i>
+					<i class="fab text-gray fa-facebook"></i>
 					<span>Facebook</span>
 				</a>
 				<a class="dropdown-item" href="https://www.youtube.com/channel/UCk-KwD5UouOkjhAvr2E-dPQ" target="_blank">
-					<i class="fab  mr-2 text-gray fa-youtube"></i>
+					<i class="fab text-gray fa-youtube"></i>
 					<span>Youtube</span>
 				</a>
 				<a class="dropdown-item" href="https://t.me/blackcodercrush" target="_blank">
-					<i class="fab fa-fw mr-2 text-gray fa-telegram"></i>
+					<i class="fab fa-fw text-gray fa-telegram"></i>
 					<span>Telegram</span>
 				</a>
 				<a class="dropdown-item" href="https://github.com/blackcodercrush" target="_blank">
-					<i class="fab  mr-2 text-gray fa-github"></i>
+					<i class="fab text-gray fa-github"></i>
 					<span>Github</span>
 				</a>
 				<a class="dropdown-item" href="https://myblackcodercrush.blogspot.com/" target="_blank">
-					<i class="fab  mr-2 text-gray fa-blogger"></i>
+					<i class="fab text-gray fa-blogger"></i>
 					<span>Blogspot</span>
 				</a>
 			</div>
