--- a/app/Views/tools/encdec.latte
+++ b/app/Views/tools/encdec.latte
@@ -37,6 +37,10 @@
 								<textarea id="resultencdec" class="form-control" name="resultencdec" cols="30" rows="10" readonly></textarea>
 							</div>
 						</form>
+						<button id="btncopyencdec" class="btn btn-primary">
+							<i class="fal fa-fw fa-copy"></i>
+							Copy Text !
+						</button>
 					</div>
 				</div>
 			</div>
