--- a/assets/scss/_dark.scss
+++ b/assets/scss/_dark.scss
@@ -1,150 +1,372 @@
-#wrapper {
-	#content-wrapper {
-		transition: all 0.1s ease-in-out;
-		background-color: $text-color-dark;
-	}
-	.card {
-		box-shadow: 0 0.15rem 1.74rem rgba(0, 0, 0, 0.15);
-	}
-
-	&.dark {
+[data-theme="dark"] {
+	#wrapper {
 		#content-wrapper {
 			background-color: $dark-background-color;
 		}
 		.container-fluid > * {
 			color: darken($text-color-dark, 5%);
 		}
-		.home {
-			background: $dark-color;
-			box-shadow:  -6px -6px 12px #192430, 6px 6px 12px #293c50;
-			border-color: #272b30;
+	}
+	.home {
+		background: $dark-color;
+		box-shadow:  -6px -6px 12px #192430, 6px 6px 12px #293c50;
+		border-color: #272b30;
+		color: $text-color-dark;
+	}
+	.home-header {
+		background-color: #2c3e50;
+		color: $text-color-dark;
+		border-bottom-color: #2d3436;
+	}
+	.home-content-title, .home-content-slogan {
+		color: $text-color-dark;
+	}
+	.home-list-item-link {
+		color: rgba($color: #999, $alpha: 0.4);
+		&:hover {
 			color: $text-color-dark;
-		}
-		.home-header {
-			background-color: #2c3e50;
-			color: $text-color-dark;
-			border-bottom-color: #2d3436;
-		}
-		.home-content-title, .home-content-slogan {
-			color: $text-color-dark;
-		}
-		.home-list-item-link {
-			color: rgba($color: #999, $alpha: 0.4);
-			&:hover {
-				color: $text-color-dark;
-				span {
-					color: $text-color-dark;
-				}
-			}
 			span {
-				color: rgba($color: #fff, $alpha: 0.4);
-			}
-		}
-		hr.home-divider {
-			border-color: #2c3e50;
-		}
-		.home-body-link {
-			color: $text-color-dark;
-		}
-		.card {
-			border-color: $dark-color;
-			background: $dark-color;
-			box-shadow: 0 0.15rem 1.85rem 0 rgba($color: $text-color-dark, $alpha: 0.10);
-			color: $text-color-dark;
-		}
-		.card-header {
-			background-color: #2c3e50;
-			border-bottom-color: #2d3436;
-			color: $text-color-dark;
-		}
-		.list-group-flush .list-group-item {
-			background: transparent;
-			color: $text-color-dark;
-			border-bottom-color: lighten(#2c3e50, 15%);
-		}
-		label {
-			color: rgba($color: $text-color-dark, $alpha: 0.8);
-		}
-		.table {
-			color: darken($color: $text-color-dark, $amount: 3%);
-			thead {
-				th {
-					border-bottom-color: lighten(#2e3e50, 10%);
-				}
-			}
-			th, td {
-				border-top-color: lighten(#2e3e50, 10%);
-			}
-		}
-		table.dataTable {
-			margin-top: 30px !important;
-
-		}
-		.dataTables_wrapper {
-			padding-top: 10px !important;
-			.dataTable_info {
 				color: $text-color-dark;
 			}
-			.dataTables_paginate {
-				border: 1px solid red;
-				margin-right: 1em;
-				.pagination {
-					border: 1px solid red;
-					.page-link {
-					border: 1px solid red;
+		}
+		span {
+			color: rgba($color: #fff, $alpha: 0.4);
+		}
+	}
+	hr.home-divider {
+		border-color: #2c3e50;
+	}
+	.home-body-link {
+		color: $text-color-dark;
+	}
+	.card {
+		border-color: $dark-color;
+		background: $dark-color;
+		box-shadow: 0 0.15rem 1.85rem 0 rgba($color: $text-color-dark, $alpha: 0.10);
+		color: $text-color-dark;
+	}
+	.card-header {
+		background-color: #2c3e50;
+		border-bottom-color: #2d3436;
+		color: $text-color-dark;
+	}
+	.list-group-flush .list-group-item {
+		background: transparent;
+		color: $text-color-dark;
+		border-bottom-color: lighten(#2c3e50, 15%);
+	}
+	label {
+		color: rgba($color: $text-color-dark, $alpha: 0.8);
+	}
+	.table {
+		color: darken($color: $text-color-dark, $amount: 3%);
+		thead {
+			th {
+				border-bottom-color: lighten(#2e3e50, 10%);
+			}
+		}
+		th, td {
+			border-top-color: lighten(#2e3e50, 10%);
+		}
+	}
+	table.dataTable {
+		margin-top: 30px !important;
+	}
+	.dataTables_wrapper {
+		padding-top: 10px !important;
+		.dataTable_info {
+			color: $text-color-dark;
+		}
+		.dataTables_paginate {
+			margin-right: 1em;
+			.pagination {
+				.page-link {
 					overflow: auto;
 					overflow-x: scroll;
 					max-width: 100%;
+				}
+			}
+			.page-item {
+				&.active .page-link {
+					background-color: $dark-primary;
+					border-color: $dark-primary;
+				}
+				.page-link {
+					background-color: $dark-color;
+					border-color: lighten($dark-color, 15%);
+					color: $text-color-dark;
+					&:hover {
+						background-color: rgba($color: lighten($dark-color, 15%), $alpha: 0.4);
+						border-color: lighten($dark-color, 10%);
+					}
+					&:focus {
+						box-shadow: 0 0 0 0.2rem rgba($color: $dark-primary, $alpha: 0.25);
 					}
 				}
-				.page-item {
-					&.active .page-link {
-						background-color: $dark-primary;
-						border-color: $dark-primary;
-					}
-					.page-link {
-						background-color: $dark-color;
-						border-color: lighten($dark-color, 15%);
-						color: $text-color-dark;
+				&.disabled .page-link {
+					background-color: $dark-color;
+					border-color: lighten($dark-color, 15%);
+					color: lighten(#858796, 10%);
+				}
+			}
+		}
+		.dataTables_length {
+			label {
+				margin-left: 1em;
+			}
+			select {
+				color: #f1f2f6;
+				border-color: #6b6d7d;
+				background: #213040 $custom-select-background  no-repeat right 0.75rem center/8px 10px;
+				&:focus {
+					border-color: #4e73df;
+					box-shadow: 0 0 0 0.25rem rgba(46, 89, 217, 0.25);
+				}
+			}
+		}
+		.dataTables_filter {
+			input {
+				margin-right: 1em;
+				background: #213040;
+				color: #f1f2f6;
+				border-color: #6b6d7d;
+				&:focus {
+					border-color: #4e73df;
+					box-shadow: 0 0 0 0.25rem rgba(46, 89, 217, 0.25);
+				}
+			}
+		}
+	}
+	.form-control {
+		background: #213040;
+		color: #f1f2f6;
+		border-color: #6b6d7d;
+		&:focus {
+			border-color: #4e73df;
+			box-shadow: 0 0 0 0.25rem rgba(46, 89, 217, 0.25);
+		}
+		&.is-invalid {
+			border-color: #ff5e57;
+			padding-right: calc(1.6em + 0.85rem);
+			background-image: $form-is-invalid;
+			background-repeat: no-repeat;
+			background-position: right calc(0.375em + 0.1880rem) center;
+			background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+			&:focus {
+				border-color: rgba(255, 63, 52, 1.0);
+				box-shadow: 0 0 0 0.25rem rgba(255, 63, 52, 0.3);
+			}
+		}
+		&.is-valid {
+			border-color: #0be881;
+			padding-right: calc(1.6em + 0.85rem);
+			background-image: $form-is-valid;
+			background-repeat: no-repeat;
+			background-position: right calc(0.375em + 0.1880rem) center;
+			background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+			&:focus {
+				border-color: #0be881;
+				box-shadow: 0 0 0 0.25rem rgba(5, 196, 107, 0.3)
+			}
+		}
+		&::placeholder {
+			color: rgba(255, 255, 255, 0.5);
+		}
+		&[readonly], &.disabled, &:disabled {
+			background-color: lighten(#2e3c50, 7%);
+			opacity: 1;
+		}
+	}
+	.custom-select {
+		color: #f1f2f6;
+		border-color: #6b6d7d;
+		background: #213040 $custom-select-background  no-repeat right 0.75rem center/8px 10px;
+		&:focus {
+			border-color: #4e73df;
+			box-shadow: 0 0 0 0.25rem rgba(46, 89, 217, 0.25);
+		}
+		&.is-invalid {
+			border-color: #ff5e57;
+			padding-right: calc(0.75em + 2.3125rem);
+			background: $custom-select-is-invalid;
+			&:focus {
+				border-color: #ff5e57;
+				box-shadow: 0 0 0 0.25rem rgba(255, 63, 52, 0.3);
+			}
+		}
+		&.is-valid {
+			border-color: #0be881;
+			padding-right: calc(0.75em + 2.3125rem);
+			background: $custom-select-is-valid;
+			&:focus {
+				border-color: #0be881;
+				box-shadow: 0 0 0 0.25rem rgba(5, 196, 107, 0.3)
+			}
+		}
+		&[readonly], &.disabled, &:disabled {
+			background-color: lighten(#2e3c50, 7%);
+			opacity: 1;
+		}
+	}
+	.navbar {
+		background-color: $dark-color !important;
+		background-image: linear-gradient(150deg, rgba($color: #f0f0f0, $alpha: 0.1) 16%,rgba($color: #f0f0f0, $alpha: 0.1) 17%,rgba($color: #f0f0f0, $alpha: 0.05) 17%,rgba($color: #f0f0f0, $alpha: 0.05) 23%, transparent 10%, transparent 75%,rgba($color: #f0f0f0, $alpha: 0.05) 78%,rgba($color: #f0f0f0, $alpha:  0.05) 84%,rgba($color: #f0f0f0, $alpha: 0.1) 84%, rgba($color: #f0f0f0, $alpha: 0.1));
+		.btn-toggle {
+			@for $om from 1 through 3 {
+				.btn-bar:nth-of-type(#{$om}) {
+					background-color: #ccc;
+				}
+			}
+			&.active .btn-bar:nth-of-type(2) {
+				box-shadow: none;
+				background: transparent;
+			}
+		}
+		.dropdown-menu {
+			background-color: $dark-color;
+			color: #f1f1f1;
+			border: 1px solid $dark-color;
+		}
+		.dropdown-header {
+			color: #fff;
+		}
+		.dropdown-item {
+			color: #f1f1f1;
+			ion-icon {
+				color: #f1f1f1;
+				margin-top: 2px;
+			}
+			@include hover-focus() {
+				color: #424242;
+				border-color: #f1f1f1;
+				background-color: #f1f1f1;
+			}
+		}
+		.dropdown-list .dropdown-item {
+			border-left: 1px solid lighten($dark-color, 15%);
+			border-right: 1px solid lighten($dark-color, 15%);
+			border-bottom: 1px solid lighten($dark-color, 15%);
+		}
+	}
+	.sidebar {
+		background-color: $dark-color !important;
+		background-image: none;
+		.nav-item {
+			.collapse, .collapsing {
+				.collapse-inner {
+					background: linear-gradient(150deg, $dark-color 10%, #05202b);
+					// background-color: #213040;
+					box-shadow:  -4px -4px 6px rgba($color: #052734, $alpha: 0.5), 4px 4px 6px rgba($color: #062f40, $alpha: 0.5);
+					// box-shadow: 0 0.15rem 1.75rem 0 rgba($color: #062f40, $alpha: 0.15);
+					border-color: #213040;
+					.collapse-item {
+						background-color: transparent;
+						color: rgba($color: #fff, $alpha: 0.5);
+						transition: transform 0.2s ease;
+						transform: scale(0.9);
+						i, ion-icon {
+							color: rgba($color: #fff, $alpha: 0.7);
+						}
 						&:hover {
-							background-color: rgba($color: lighten($dark-color, 15%), $alpha: 0.4);
-							border-color: lighten($dark-color, 10%);
-						}
-						&:focus {
-							box-shadow: 0 0 0 0.2rem rgba($color: $dark-primary, $alpha: 0.25);
+							color: rgba($color: #fff, $alpha: 1);
+							background-color: rgba(20, 65, 86, 0.7);
+							transform: scale(1.01);
 						}
 					}
-					&.disabled .page-link {
-						background-color: $dark-color;
-						border-color: lighten($dark-color, 15%);
-						color: lighten(#858796, 10%);
+					.collapse-header, .collapse-heading {
+						color: rgba($color: #fff, $alpha: 0.7);
 					}
 				}
 			}
-			.dataTables_length {
-				label {
-					margin-left: 1em;
-				}
-				select {
-					color: #f1f2f6;
-					border-color: #6b6d7d;
-					background: #213040 $custom-select-background  no-repeat right 0.75rem center/8px 10px;
-					&:focus {
-						border-color: #4e73df;
-						box-shadow: 0 0 0 0.25rem rgba(46, 89, 217, 0.25);
+		}
+	}
+	.footer {
+		background-color: $dark-color !important;
+		background-image: linear-gradient(40deg, rgba($color: #f0f0f0, $alpha: 0.1) 16%,rgba($color: #f0f0f0, $alpha: 0.1) 17%,rgba($color: #f0f0f0, $alpha: 0.05) 17%,rgba($color: #f0f0f0, $alpha: 0.05) 23%, transparent 10%, transparent 75%,rgba($color: #f0f0f0, $alpha: 0.05) 78%,rgba($color: #f0f0f0, $alpha: 0.05) 84%,rgba($color: #f0f0f0, $alpha: 0.1) 84%, rgba($color: #f0f0f0, $alpha: 0.1));
+		box-shadow: 0 8px 10px rgba($color: #fff, $alpha: 0.4);
+	}
+}
+@include media-breakpoint-up(md) {
+	[data-theme="dark"] {
+		.sidebar.toggled, .sidebar {
+			.nav-item {
+				.collapse, .collapsing {
+					.collpase-inner {
+						background: linear-gradient(155deg, #052b4c 25%, $dark-color 75%) !important;
+						box-shadow: -2px 2px 5px #252a2e, 2px -2px 5px #434a52, 2px -2px 5px rgba($color: #fff, $alpha: 0.1), -2px 2px 5px rgba($color: #fff, $alpha: 0.1);
 					}
 				}
 			}
-			.dataTables_filter {
-				input {
-					margin-right: 1em;
-					background: #213040;
-					color: #f1f2f6;
-					border-color: #6b6d7d;
-					&:focus {
-						border-color: #4e73df;
-						box-shadow: 0 0 0 0.25rem rgba(46, 89, 217, 0.25);
+		}
+
+		.sidebar {
+			.nav-item {
+				.collapse, .collapsing {
+					.collapse-inner {
+						.collapse-item {
+							transform: none;
+							&:hover {
+								color: rgba($color: #fff, $alpha: 1);
+								transform: none;
+							}
+						}
 					}
+				}
+			}
+		}
+	}
+	.sidebar {
+		.nav-item {
+			.collapse, .collapsing {
+				.collapse-inner {
+					box-shadow: -2px 2px 4px rgba(0, 0, 0, 0), 2px -2px 4px rgba(0, 0, 0, 0);
+				}
+			}
+			.nav-link {
+				&[data-toggle="collapse"] {
+					&::after {
+						font-weight: 400;
+						content: '\f107';
+						font-family: 'Font Awesome 5 Pro';
+					}
+					&.collapsed::after {
+						content: '\f105';
+					}
+				}
+			}
+		}
+		.sidebar-brand {
+			.sidebar-brand-icon {
+				.img-brand {
+					display: none;
+					visibility: hidden;
+				}
+			}
+			.sidebar-brand-text {
+				font-size: 1rem;
+			}
+		}
+
+		.nav-item {
+			.collapse, .collapsing {
+				.collapse-inner {
+					.collapse-item {
+						transform: none;
+					}
+				}
+			}
+		}
+		&.toggled {
+			.sidebar-brand {
+				.sidebar-brand-icon {
+					.img-brand {
+						display: block;
+						visibility: visible;
+						overflow: visible;
+					}
+				}
+				.sidebar-brand-text {
+					display: none;
 				}
 			}
 		}
